Ločil mapo s slikami

--- a/LaTeX/Pantner27211195.tex
+++ b/LaTeX/Pantner27211195.tex
@@ -25,7 +25,7 @@ Dohodke lahko primerjamo s pomočjo vzporednih škatel z brki, ki
 so prikazane na sliki \ref{img:cetrti}.
 \begin{figure}[H]
     \centering
-    \includegraphics[width=12cm]{vse_cetrti.png}
+    \includegraphics[width=12cm]{Slike/vse_cetrti.png}
     \caption{Škatle z brki za dohodke posamezne četrti.}
     \label{img:cetrti}
 \end{figure}
@@ -43,7 +43,7 @@ iz severne četrti in poglejmo vzporedne škatle z brki za vzorce
 iz severne četrti. Prikazane so na sliki \ref{img:sever}.
 \begin{figure}[H]
     \centering
-    \includegraphics[width=12cm]{sever.png}
+    \includegraphics[width=12cm]{Slike/sever.png}
     \caption{Škatle z brki dohodkov severne četrti.}
     \label{img:sever}
 \end{figure}
