--- a/LaTeX/statprojekt.sty
+++ b/LaTeX/statprojekt.sty
@@ -27,9 +27,14 @@
 \setlist[enumerate]{itemsep=4.0pt plus 2.0pt minus 1.0pt,topsep=4.0pt plus 2.0pt minus 1.0pt}
 \setlist[itemize]{itemsep=4.0pt plus 2.0pt minus 1.0pt,topsep=4.0pt plus 2.0pt minus 1.0pt}
 
-%%%%% Operators
+%%%%%
 
+\newcommand{\R}{\mathbb{R}}
 \DeclareMathOperator{\Bin}{Bin}
+\DeclareMathOperator{\RSS}{RSS}
+\DeclareMathOperator{\AIC}{AIC}
+\providecommand{\set}[1]{\left\{#1\right\}}
+\providecommand{\norm}[1]{\left\lvert\left\lvert #1\right\rvert\right\rvert}
 
 
 %%%%%
