--- a/LaTeX/statprojekt.sty
+++ b/LaTeX/statprojekt.sty
@@ -27,6 +27,9 @@
 \setlist[enumerate]{itemsep=4.0pt plus 2.0pt minus 1.0pt,topsep=4.0pt plus 2.0pt minus 1.0pt}
 \setlist[itemize]{itemsep=4.0pt plus 2.0pt minus 1.0pt,topsep=4.0pt plus 2.0pt minus 1.0pt}
 
+\RequirePackage{csquotes}
+\RequirePackage[backend=biber]{biblatex}
+
 %%%%%
 
 \newcommand{\R}{\mathbb{R}}
@@ -40,15 +43,9 @@
 %%%%%
 
 \title{\textbf{{\naslov}}}
-\author{Jan Pantner (\href{mailto:jan.pantner@gmail.com}{jan.pantner@gmail.com})}
-\date{\today}
 
 \fancypagestyle{}{
-\fancyhf{}
-\renewcommand{\headrulewidth}{0.4pt}
-\fancyhead[L]{Jan Pantner}
-\fancyhead[R]{\naslov}
-\fancyfoot[C]{\thepage}}
+\fancyhf{}}
 
 \RequirePackage[unicode]{hyperref}
 \hypersetup{
