--- a/LaTeX/stat.bib
+++ b/LaTeX/stat.bib
@@ -1,10 +1,10 @@
 @book{rice2007mathematical,
   title={Mathematical Statistics and Data Analysis},
-  author={Rice, J.~A.},
+  author={Rice, J.A.},
   isbn={9780534399429},
   edition={Third Edition},
   year={2007},
-  publisher={Duxbury}
+  publisher={Duxbury},
 }
 
 @book{raic,
@@ -14,3 +14,18 @@
   url={https://ucilnica.fmf.uni-lj.si/mod/resource/view.php?id=63830},
   urldate={2024-09-16}
 }
+
+@book{raic2,
+  author={Raič, M.},
+  title={Statistično sklepanje pri linearni regresiji},
+  edition={Dopolnitve predavanj iz statistike v študijskem letu 2023/24},
+  url={https://ucilnica.fmf.uni-lj.si/mod/resource/view.php?id=63680},
+  urldate={2024-09-19}
+}
+
+@misc{wiki:Sinusoidal_model,
+   author = {Wikipedia},
+   title = {Sinusoidal model},
+   url = {http://en.wikipedia.org/w/index.php?title=Sinusoidal\%20model&oldid=1176465107},
+   urldate={2024-09-17}
+ }
