--- a/LaTeX/statprojekt.sty
+++ b/LaTeX/statprojekt.sty
@@ -34,6 +34,7 @@
 
 \newcommand{\R}{\mathbb{R}}
 \DeclareMathOperator{\Bin}{Bin}
+\DeclareMathOperator{\fish}{fisher}
 \DeclareMathOperator{\RSS}{RSS}
 \DeclareMathOperator{\AIC}{AIC}
 \providecommand{\set}[1]{\left\{#1\right\}}
